tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Valid/AbstractServiceMessage.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Valid;

abstract class AbstractServiceMessage {}
