tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Invalid/DenyListRegression/DenyListDoubleErrorCandidate.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Invalid\DenyListRegression;

final class DenyListDoubleErrorCandidate
{
    private DenyListedConcreteClass $denyListed;
}
